examples/errors/type_mismatch_field_init/main.hd
struct Point {
    x: int,
    y: int
}

fn main(): int {
    let p = Point { x: true, y: 20 };
    return 0;
}
